# task1_point

./: CMakeLists.txt
src/: xipoint.cpp
tests/: CMakeLists.txt
